--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -1571,6 +1571,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gcdIter(a, b):\n",
+    "    if a < b:\n",
+    "        c = a\n",
+    "        while a % c != 0 and b % c != 0:\n",
+    "            c -= 1\n",
+    "        return c\n",
+    "    elif a == b:\n",
+    "        return a\n",
+    "    else:\n",
+    "        c = b\n",
+    "        while a % c != 0 and b % c != 0:\n",
+    "            c = c -1\n",
+    "        return c\n",
+    "\n",
+    "print(gcdIter(3, 6))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
