--- a/函数的默认值.ipynb
+++ b/函数的默认值.ipynb
@@ -80,6 +80,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bar(y, x=1):\n",
+    "    print(\"x = \" + str(x) + \", y = \" + str(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
