--- a/練習する.ipynb
+++ b/練習する.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,7 @@
      "output_type": "stream",
      "text": [
       "{'名字：': 'liu', '姓氏': 'yanan', 'age': '24', 'role': 'student'}\n",
+      "Hello, liu yanan\n",
       "用户权限： can_add_post can_delete_post can_ban_user "
      ]
     }
@@ -28,8 +29,8 @@
     "            other_info[key] = value\n",
     "        return other_info\n",
     "\n",
-    "def greet_user(self):\n",
-    "    print(\"Hello, \" + self.first_name + ' ' + self.last_name)\n",
+    "    def greetings(self):\n",
+    "        print(\"Hello, \" + self.first_name + ' ' + self.last_name)\n",
     "\n",
     "\n",
     "class Admin(User):\n",
@@ -39,12 +40,13 @@
     "\n",
     "    def show_my_privileges(self):\n",
     "        print(\"用户权限： \", end='')\n",
-    "        for _ in self.privileges: # 循环变量，不用特别起名字，使用下划线就可以了\n",
-    "            print(_, end=' ') # 空格来做end，这样才能分隔开每个条目的显示。\n",
+    "        for _ in self.privileges:  # 循环变量，不用特别起名字，使用下划线就可以了\n",
+    "            print(_, end=' ')  # 空格来做end，这样才能分隔开每个条目的显示。\n",
     "\n",
     "\n",
     "yanan = Admin('liu', 'yanan', 'can_add_post', 'can_delete_post', 'can_ban_user', age='24', role='student')\n",
     "print(yanan.describe_myself())\n",
+    "yanan.greetings()\n",
     "yanan.show_my_privileges()"
    ]
   },
