--- a/set.ipynb
+++ b/set.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -99,15 +99,84 @@
     "print(\"添加一个元素，看看迭代器工作是否正常：\")\n",
     "bag.add(\"foo\")\n",
     "for item in bag:\n",
-    "    print(item)\n"
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set和Bag的区别就是，Set这种数据结构里面不可以有重复的元素。\n",
+    "class Set(Bag):\n",
+    "    # 所以我们让Set继承Bag，然后把add方法重新实现一下就可以了，其它的功能和Bag一致。\n",
+    "    def add(self, item):\n",
+    "        # 和Bag的唯一区别就是，判断一下要添加的item，是不是已经存在了。\n",
+    "        if item in self._theItems:\n",
+    "            pass\n",
+    "        else:\n",
+    "            self._theItems.append(item)\n",
+    "            self._len = len(self._theItems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set = Set()\n",
+    "set.add('x')\n",
+    "set.add('y')\n",
+    "set.add('y') # 添加重复数据试试看，应该是不会被添加进去的，仍然只有一个'y'\n",
+    "set.add('z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set.length() # 只有三个items, 说明重复的y没有被添加"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      "y\n",
+      "z\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in set: # 查看set里面的数据\n",
+    "    print(item)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
