--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -1,20 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x : 1\n",
-      "y : 2\n",
-      "z : 3\n"
-     ]
-    }
-   ],
    "source": [
     "def foo(**args):\n",
     "    for k,v in args.items():\n",
@@ -43,13 +31,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Hello, world!"
+   ]
   }
  ],
  "metadata": {
