--- a/循环.ipynb
+++ b/循环.ipynb
@@ -4,23 +4,58 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please tell me your name:\n",
+      "(enter 'q' at any time to quit).\n"
+     ]
+    }
+   ],
    "source": [
-    "#Using a Function with a while Loop\n",
+    "# 要用里面的flush()方法来刷新输出。\n",
+    "import sys\n",
+    "\n",
+    "# Using a Function with a while Loop\n",
     "def get_formatted_name(first_name, last_name):\n",
     "    full_name = first_name + ' ' + last_name\n",
     "    return full_name.title()\n",
+    "\n",
     "while True:\n",
-    "    print(\"Please tell me your name(enter 'q' at any time to quit).\")\n",
-    "    f_name=input(\"Fist name:\")\n",
-    "    if f_name=='q':\n",
+    "    print(\"Please tell me your name:\")\n",
+    "    print(\"(enter 'q' at any time to quit).\")\n",
+    "    sys.stdout.flush()\n",
+    "    \n",
+    "    f_name = input(\"Fist name:\")\n",
+    "\n",
+    "    if f_name == 'q':\n",
     "        break\n",
-    "    l_name=input(\"Last name:\")\n",
-    "    if l_name=='q':\n",
+    "\n",
+    "    l_name = input(\"Last name:\")\n",
+    "\n",
+    "    if l_name == 'q':\n",
     "        break\n",
-    "    formatted_name=get_formatted_name(f_name,l_name)\n",
-    "    print(\"\\nHello,\"+formatted_name+\"!\")"
+    "\n",
+    "    formatted_name = get_formatted_name(f_name, l_name)\n",
+    "\n",
+    "    print(\"\\nHello,\" + formatted_name + \"!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
