--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.datasets import imdb\n",
@@ -192,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -227,6 +231,42 @@
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myt = {'x', 1, 'y', 2, 'z', 3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foo(**args):\n",
+    "    print(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 1, 'y': 2, 'z': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "foo(x=1, y=2, z=3)"
    ]
   },
   {
